--- a/templates/base.html
+++ b/templates/base.html
@@ -201,7 +201,7 @@
       </div>
 
       <main class="flex-1 overflow-y-auto focus:outline-none">
-        <div class="py-6 px-4 sm:px-6 lg:px-8">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-6">
           {% if messages %}
           <div class="mb-4 space-y-2">
             {% for message in messages %}
